// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Swap can change tokens amounts 1`] = `
<div>
  <div
    class="MuiGrid-root-1 MuiGrid-container-2"
  >
    <div
      class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <div
        class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-104 MuiGrid-container-2 MuiGrid-justify-xs-space-between-21"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-item-3"
        >
          <h6
            class="MuiTypography-root-106 WithStyles(ForwardRef(Typography))-root-105 MuiTypography-subtitle1-117 MuiTypography-colorTextPrimary-131"
          >
            From
          </h6>
        </div>
        <div
          class="MuiGrid-root-1 MuiGrid-item-3"
        >
          <h6
            class="MuiTypography-root-106 WithStyles(ForwardRef(Typography))-root-136 MuiTypography-subtitle1-117 MuiTypography-colorTextSecondary-132"
          />
        </div>
      </div>
      <div
        class="MuiBox-root-138 MuiBox-root-139 Styled(MuiBox)-root-137"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-align-items-xs-center-10"
        >
          <div
            aria-label="token to swap"
            class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-true-35"
          >
            <div
              class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-align-items-xs-center-10"
            >
              <div
                class="MuiGrid-root-1 MuiGrid-item-3"
              >
                <div
                  class="MuiBox-root-138 MuiBox-root-141 Styled(MuiBox)-root-140"
                >
                  <div
                    class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-spacing-xs-1-24 MuiGrid-align-items-xs-center-10"
                  >
                    <div
                      class="MuiGrid-root-1 MuiGrid-item-3"
                    >
                      <div
                        class="MuiAvatar-root-144 MuiAvatar-circle-146 WithStyles(ForwardRef(Avatar))-root-142 WithStyles(ForwardRef(Avatar))-root-143 MuiAvatar-colorDefault-145"
                        dimension="48"
                      >
                        <img
                          alt="token icon"
                          src="token.svg"
                        />
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-true-35"
                    >
                      <div
                        class="MuiBox-root-138 MuiBox-root-154 Styled(MuiBox)-root-152 Styled(MuiBox)-root-153"
                      >
                        <p
                          class="MuiTypography-root-106 WithStyles(ForwardRef(Typography))-root-155 MuiTypography-body1-108 MuiTypography-colorTextPrimary-131"
                        >
                          TK1
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root-1 MuiGrid-item-3"
                    >
                      <button
                        aria-label="change token"
                        class="MuiButtonBase-root-165 MuiIconButton-root-156"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label-164"
                        >
                          <svg>
                            dropdown-arrow.svg
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root-264"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-spacing-xs-1-24 MuiGrid-item-3 MuiGrid-align-items-xs-center-10 MuiGrid-justify-xs-flex-end-20 MuiGrid-grid-xs-4-39 MuiGrid-grid-sm-6-55"
          >
            <div
              class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47 MuiGrid-grid-sm-6-55"
            >
              <div
                autocorrect="off"
                class="MuiInputBase-root-189  makeStyles-input-188 MuiInputBase-fullWidth-199"
                inputmode="decimal"
                spellcheck="false"
              >
                <input
                  aria-label="amount of token to swap"
                  autocomplete="off"
                  class="MuiInputBase-input-200"
                  pattern="^[0-9]*[.,]?[0-9]*$"
                  placeholder="0.00"
                  type="text"
                  value="100"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <div
        class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-207 MuiGrid-container-2 MuiGrid-align-items-xs-center-10 MuiGrid-justify-xs-center-19"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-item-3"
        >
          <button
            aria-label="invert tokens swap direction"
            class="MuiButtonBase-root-165 MuiIconButton-root-156"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-164"
            >
              <svg>
                swap-direction.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-264"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <div
        class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-104 MuiGrid-container-2 MuiGrid-justify-xs-space-between-21"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-item-3"
        >
          <h6
            class="MuiTypography-root-106 WithStyles(ForwardRef(Typography))-root-105 MuiTypography-subtitle1-117 MuiTypography-colorTextPrimary-131"
          >
            To
          </h6>
        </div>
        <div
          class="MuiGrid-root-1 MuiGrid-item-3"
        >
          <h6
            class="MuiTypography-root-106 WithStyles(ForwardRef(Typography))-root-136 MuiTypography-subtitle1-117 MuiTypography-colorTextSecondary-132"
          />
        </div>
      </div>
      <div
        class="MuiBox-root-138 MuiBox-root-208 Styled(MuiBox)-root-137"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-align-items-xs-center-10"
        >
          <div
            aria-label="token to be swapped"
            class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-true-35"
          >
            <div
              class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-align-items-xs-center-10"
            >
              <div
                class="MuiGrid-root-1 MuiGrid-item-3"
              >
                <div
                  class="MuiBox-root-138 MuiBox-root-209 Styled(MuiBox)-root-140"
                >
                  <div
                    class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-spacing-xs-1-24 MuiGrid-align-items-xs-center-10"
                  >
                    <div
                      class="MuiGrid-root-1 MuiGrid-item-3"
                    >
                      <div
                        class="MuiAvatar-root-144 MuiAvatar-circle-146 WithStyles(ForwardRef(Avatar))-root-142 WithStyles(ForwardRef(Avatar))-root-210 MuiAvatar-colorDefault-145"
                        dimension="48"
                      >
                        <img
                          alt="token icon"
                          src="token2.svg"
                        />
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-true-35"
                    >
                      <div
                        class="MuiBox-root-138 MuiBox-root-212 Styled(MuiBox)-root-152 Styled(MuiBox)-root-211"
                      >
                        <p
                          class="MuiTypography-root-106 WithStyles(ForwardRef(Typography))-root-155 MuiTypography-body1-108 MuiTypography-colorTextPrimary-131"
                        >
                          TK2
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root-1 MuiGrid-item-3"
                    >
                      <button
                        aria-label="change token"
                        class="MuiButtonBase-root-165 MuiIconButton-root-156"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label-164"
                        >
                          <svg>
                            dropdown-arrow.svg
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root-264"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-align-items-xs-center-10 MuiGrid-grid-xs-4-39 MuiGrid-grid-sm-6-55"
          >
            <div
              autocorrect="off"
              class="MuiInputBase-root-189  makeStyles-input-188 MuiInputBase-fullWidth-199"
              inputmode="decimal"
              spellcheck="false"
            >
              <input
                aria-label="amount of token to be swapped"
                autocomplete="off"
                class="MuiInputBase-input-200"
                pattern="^[0-9]*[.,]?[0-9]*$"
                placeholder="0.00"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-213 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <h6
        class="MuiTypography-root-106 WithStyles(ForwardRef(Typography))-root-136 Styled(WithStyles(ForwardRef(Typography)))-root-214 MuiTypography-subtitle1-117 MuiTypography-colorTextSecondary-132"
      >
        <span>
          1 TK1 = 
        </span>
        <span>
          <span
            class="MuiSkeleton-root-216 MuiSkeleton-text-217 WithStyles(ForwardRef(Skeleton))-root-215 MuiSkeleton-pulse-220"
            style="width: 20px;"
          />
        </span>
        <span>
           TK2
        </span>
      </h6>
    </div>
    <div
      class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <button
        class="MuiButtonBase-root-165 MuiButton-root-228 MuiButton-contained-236 WithStyles(ForwardRef(Button))-root-227 MuiButton-containedSecondary-238 MuiButton-disableElevation-239 MuiButton-disabled-241 MuiButton-fullWidth-251 MuiButtonBase-disabled-166"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="MuiButton-label-229"
        >
          Enter an amount
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Swap can swap tokens direction 1`] = `
<div>
  <div
    class="MuiGrid-root-1 MuiGrid-container-2"
  >
    <div
      class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <div
        class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-104 MuiGrid-container-2 MuiGrid-justify-xs-space-between-21"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-item-3"
        >
          <h6
            class="MuiTypography-root-106 WithStyles(ForwardRef(Typography))-root-105 MuiTypography-subtitle1-117 MuiTypography-colorTextPrimary-131"
          >
            From
          </h6>
        </div>
        <div
          class="MuiGrid-root-1 MuiGrid-item-3"
        >
          <h6
            class="MuiTypography-root-106 WithStyles(ForwardRef(Typography))-root-136 MuiTypography-subtitle1-117 MuiTypography-colorTextSecondary-132"
          />
        </div>
      </div>
      <div
        class="MuiBox-root-138 MuiBox-root-139 Styled(MuiBox)-root-137"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-align-items-xs-center-10"
        >
          <div
            aria-label="token to swap"
            class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-true-35"
          >
            <div
              class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-align-items-xs-center-10"
            >
              <div
                class="MuiGrid-root-1 MuiGrid-item-3"
              >
                <div
                  class="MuiBox-root-138 MuiBox-root-141 Styled(MuiBox)-root-140"
                >
                  <div
                    class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-spacing-xs-1-24 MuiGrid-align-items-xs-center-10"
                  >
                    <div
                      class="MuiGrid-root-1 MuiGrid-item-3"
                    >
                      <div
                        class="MuiAvatar-root-144 MuiAvatar-circle-146 WithStyles(ForwardRef(Avatar))-root-142 WithStyles(ForwardRef(Avatar))-root-143 MuiAvatar-colorDefault-145"
                        dimension="48"
                      >
                        <img
                          alt="token icon"
                          src="token2.svg"
                        />
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-true-35"
                    >
                      <div
                        class="MuiBox-root-138 MuiBox-root-154 Styled(MuiBox)-root-152 Styled(MuiBox)-root-153"
                      >
                        <p
                          class="MuiTypography-root-106 WithStyles(ForwardRef(Typography))-root-155 MuiTypography-body1-108 MuiTypography-colorTextPrimary-131"
                        >
                          TK2
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root-1 MuiGrid-item-3"
                    >
                      <button
                        aria-label="change token"
                        class="MuiButtonBase-root-165 MuiIconButton-root-156"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label-164"
                        >
                          <svg>
                            dropdown-arrow.svg
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root-264"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-spacing-xs-1-24 MuiGrid-item-3 MuiGrid-align-items-xs-center-10 MuiGrid-justify-xs-flex-end-20 MuiGrid-grid-xs-4-39 MuiGrid-grid-sm-6-55"
          >
            <div
              class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47 MuiGrid-grid-sm-6-55"
            >
              <div
                autocorrect="off"
                class="MuiInputBase-root-189  makeStyles-input-188 MuiInputBase-fullWidth-199"
                inputmode="decimal"
                spellcheck="false"
              >
                <input
                  aria-label="amount of token to swap"
                  autocomplete="off"
                  class="MuiInputBase-input-200"
                  pattern="^[0-9]*[.,]?[0-9]*$"
                  placeholder="0.00"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <div
        class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-207 MuiGrid-container-2 MuiGrid-align-items-xs-center-10 MuiGrid-justify-xs-center-19"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-item-3"
        >
          <button
            aria-label="invert tokens swap direction"
            class="MuiButtonBase-root-165 MuiIconButton-root-156"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-164"
            >
              <svg>
                swap-direction.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-264"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <div
        class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-104 MuiGrid-container-2 MuiGrid-justify-xs-space-between-21"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-item-3"
        >
          <h6
            class="MuiTypography-root-106 WithStyles(ForwardRef(Typography))-root-105 MuiTypography-subtitle1-117 MuiTypography-colorTextPrimary-131"
          >
            To
          </h6>
        </div>
        <div
          class="MuiGrid-root-1 MuiGrid-item-3"
        >
          <h6
            class="MuiTypography-root-106 WithStyles(ForwardRef(Typography))-root-136 MuiTypography-subtitle1-117 MuiTypography-colorTextSecondary-132"
          />
        </div>
      </div>
      <div
        class="MuiBox-root-138 MuiBox-root-208 Styled(MuiBox)-root-137"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-align-items-xs-center-10"
        >
          <div
            aria-label="token to be swapped"
            class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-true-35"
          >
            <div
              class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-align-items-xs-center-10"
            >
              <div
                class="MuiGrid-root-1 MuiGrid-item-3"
              >
                <div
                  class="MuiBox-root-138 MuiBox-root-209 Styled(MuiBox)-root-140"
                >
                  <div
                    class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-spacing-xs-1-24 MuiGrid-align-items-xs-center-10"
                  >
                    <div
                      class="MuiGrid-root-1 MuiGrid-item-3"
                    >
                      <div
                        class="MuiAvatar-root-144 MuiAvatar-circle-146 WithStyles(ForwardRef(Avatar))-root-142 WithStyles(ForwardRef(Avatar))-root-210 MuiAvatar-colorDefault-145"
                        dimension="48"
                      >
                        <img
                          alt="token icon"
                          src="token.svg"
                        />
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-true-35"
                    >
                      <div
                        class="MuiBox-root-138 MuiBox-root-212 Styled(MuiBox)-root-152 Styled(MuiBox)-root-211"
                      >
                        <p
                          class="MuiTypography-root-106 WithStyles(ForwardRef(Typography))-root-155 MuiTypography-body1-108 MuiTypography-colorTextPrimary-131"
                        >
                          TK1
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root-1 MuiGrid-item-3"
                    >
                      <button
                        aria-label="change token"
                        class="MuiButtonBase-root-165 MuiIconButton-root-156"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label-164"
                        >
                          <svg>
                            dropdown-arrow.svg
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root-264"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-align-items-xs-center-10 MuiGrid-grid-xs-4-39 MuiGrid-grid-sm-6-55"
          >
            <div
              autocorrect="off"
              class="MuiInputBase-root-189  makeStyles-input-188 MuiInputBase-fullWidth-199"
              inputmode="decimal"
              spellcheck="false"
            >
              <input
                aria-label="amount of token to be swapped"
                autocomplete="off"
                class="MuiInputBase-input-200"
                pattern="^[0-9]*[.,]?[0-9]*$"
                placeholder="0.00"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-213 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <h6
        class="MuiTypography-root-106 WithStyles(ForwardRef(Typography))-root-136 Styled(WithStyles(ForwardRef(Typography)))-root-214 MuiTypography-subtitle1-117 MuiTypography-colorTextSecondary-132"
      >
        <span>
          1 TK2 = 
        </span>
        <span>
          <span
            class="MuiSkeleton-root-216 MuiSkeleton-text-217 WithStyles(ForwardRef(Skeleton))-root-215 MuiSkeleton-pulse-220"
            style="width: 20px;"
          />
        </span>
        <span>
           TK1
        </span>
      </h6>
    </div>
    <div
      class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <button
        class="MuiButtonBase-root-165 MuiButton-root-228 MuiButton-contained-236 WithStyles(ForwardRef(Button))-root-227 MuiButton-containedSecondary-238 MuiButton-disableElevation-239 MuiButton-disabled-241 MuiButton-fullWidth-251 MuiButtonBase-disabled-166"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="MuiButton-label-229"
        >
          Enter an amount
        </span>
      </button>
    </div>
  </div>
</div>
`;
